# gilded-rose-python

./: .gitignore  Enunciado.md  Makefile  Pipfile  README.md  pyproject.toml  texttest_fixture.py
src/: gilded_rose.py
tests/: test_gilded_rose.py
